--- a/styles/style.css
+++ b/styles/style.css
@@ -9,13 +9,17 @@ html {
 }
 
 .page {
-  inline-size: 1200px;
-  block-size: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   margin: auto;
+  padding: 133px 30px;
   color: #fff;
   font-family: 'Fira Sans Condensed', sans-serif;
   font-size: 18px;
   background-color: #1b1919;
+  inline-size: 1200px;
+  block-size: 100%;
 }
 
 h1,
@@ -35,4 +39,202 @@ fieldset {
 ul,
 ol {
   list-style: none;
+}
+
+.content {
+  display: grid;
+  grid-template-columns: 711px 399px;
+  justify-content: space-between;
+  align-items: end;
+  width: 1140px;
+}
+
+.search-form {
+  display: grid;
+  grid-template-columns: 225px 212px 194px;
+  justify-content: space-between;
+  align-items: end;
+  color: #fff;
+  font-family: 'Fira Sans Condensed', sans-serif;
+}
+
+.content__list {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  gap: 32px;
+  height: 298px;
+  overflow: scroll;
+}
+
+.content__details {
+  display: flex;
+  flex-direction: column;
+  gap: 26px;
+  width: 100%;
+  height: 100%;
+}
+
+.title {
+  font-family: 'Oswald', sans-serif;
+  font-size: 75px;
+  line-height: 0.94;
+  text-transform: uppercase;
+}
+
+.content__accent {
+  color: #545050;
+}
+
+.content__card-link {
+  color: inherit;
+  text-decoration: none;
+
+}
+
+.content__video-card-title {
+  font-size: 30px;
+  text-transform: uppercase;
+}
+
+.content__video-card-description {
+  font-size: 18px;
+  line-height: 0.9;
+}
+
+.result__video-container {
+  position: relative;
+  display: flex;
+  min-width: 711px;
+  height: 386px;
+  margin-bottom: 16px;
+}
+
+.result__video {
+  min-width: 100%;
+  object-fit: fill;
+}
+
+.content__video-card {
+  display: flex;
+  justify-content: flex-start;
+  cursor: pointer;
+}
+
+.content__video-card-thumbnail{
+  width: 194px;
+  height: 103px;
+  object-fit: fill;
+  
+}
+
+.content__video-card-description-container{
+  width: 200px;
+  height: 100%;
+}
+
+/* text for searchform */
+
+.search-form__fieldset {
+  border: none;
+}
+
+.search-form__fieldset-title {
+  padding-bottom: 5px;
+  font-weight: 400;
+  font-size: 18px;
+}
+
+.search-form__label {
+  display: flex;
+  align-items: center;
+
+  width: fit-content;
+  cursor: pointer;
+}
+
+.search-form__textfield {
+  width: 225px;
+  border-top: 1px solid #fff;
+  border-right: none;
+  border-bottom: 1px solid #fff;
+  color: inherit;
+  font-family: inherit;
+  font-weight: 400;
+  font-size: 18px;
+  background-color: transparent;
+}
+
+.visually-hidden {
+  position: absolute;
+  overflow: hidden;
+  clip: rect(0 0 0 0);
+  inline-size: 1px;
+  block-size: 1px;
+  clip-path: inset(50%);
+  white-space: nowrap;
+}
+
+/* checkboxs */
+
+.search-form__pseudo-checkbox {
+  width: 20px;
+  height: 20px;
+  margin-right: 5px;
+  border: 1px solid #fff;
+  vertical-align: middle;
+  background-color: inherit;
+  appearance: none;
+}
+.search-form__checkbox-list {
+  display: flex;
+  justify-content: space-between;
+
+}
+
+/* button */
+
+.button {
+  width: 100%;
+  height: 34px;
+  border: 1px solid #fff;
+  padding: 0;
+  color: inherit;
+  font-family: inherit;
+  font-weight: bold;
+  font-size: 18px;
+  text-align: center;
+  background-color: transparent;
+  cursor: pointer;
+}
+
+/* состояния */
+
+.search-form__label:has(:focus-visible){
+  border: 1px solid #fff;
+  border-radius: 0;
+}
+
+.search-form__checkbox:checked + span {
+background-color: #fff;
+}
+
+.search-form__label:hover {
+  text-decoration: underline;
+}
+
+.button:active{
+  background: #545050;
+}
+
+.button:hover{
+  text-decoration: underline;
+}
+
+.content__video-card:active {
+  background-color: #545050;
+}
+
+.content__video-card:hover {
+  text-decoration: underline;
 }
