--- a/styles/style.css
+++ b/styles/style.css
@@ -15,7 +15,7 @@ html {
   margin: auto;
   padding: 133px 30px;
   color: #fff;
-  font-family: "Fira Sans Condensed", sans-serif;
+  font-family: 'Fira Sans Condensed', sans-serif;
   font-size: 18px;
   background-color: #1b1919;
   inline-size: 1200px;
@@ -55,7 +55,7 @@ ol {
   justify-content: space-between;
   align-items: end;
   color: #fff;
-  font-family: "Fira Sans Condensed", sans-serif;
+  font-family: 'Fira Sans Condensed', sans-serif;
 }
 
 .content__list {
