--- a/styles/style.css
+++ b/styles/style.css
@@ -53,18 +53,19 @@ ol {
   display: grid;
   grid-template-columns: 225px 212px 194px;
   justify-content: space-between;
-  align-items: end;
-  color: #fff;
-  font-family: 'Fira Sans Condensed', sans-serif;
+  color: inherit;
 }
 
 .content__list {
   position: relative;
   display: flex;
   flex-direction: column;
-  gap: 32px;
   height: 298px;
-  overflow: scroll;
+  overflow: auto;
+}
+
+.content__list-item:not(:last-of-type) {
+  margin-bottom: 30px;
 }
 
 .content__details {
@@ -76,9 +77,9 @@ ol {
 }
 
 .title {
-  font-family: "Oswald", sans-serif;
+  font-family: 'Oswald', sans-serif;
   font-size: 75px;
-  line-height: 0.94;
+  line-height: 70px;
   text-transform: uppercase;
 }
 
@@ -87,43 +88,57 @@ ol {
 }
 
 .content__card-link {
+  display: block;
+  width: 394px;
+  height: 107px;
   color: inherit;
   text-decoration: none;
 }
 
 .content__video-card-title {
+  max-width: 200px;
+  padding-bottom: 6px;
+  overflow: hidden;
+  font-family: 'Oswald', sans-serif;
   font-size: 30px;
   text-transform: uppercase;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 .content__video-card-description {
   font-size: 18px;
-  line-height: 0.9;
+  line-height: 0;
 }
 
+.result {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+}
 .result__video-container {
   position: relative;
   display: flex;
   min-width: 711px;
   height: 386px;
-  margin-bottom: 16px;
 }
 
 .result__video {
   min-width: 100%;
-  object-fit: fill;
+  object-fit: cover;
 }
 
 .content__video-card {
   display: flex;
   justify-content: flex-start;
+  padding-top: 2px;
   cursor: pointer;
 }
 
 .content__video-card-thumbnail {
   width: 194px;
   height: 103px;
-  object-fit: fill;
+  object-fit: cover;
 }
 
 .content__video-card-description-container {
@@ -155,6 +170,7 @@ ol {
   border-top: 1px solid #fff;
   border-right: none;
   border-bottom: 1px solid #fff;
+  outline: none;
   color: inherit;
   font-family: inherit;
   font-weight: 400;
@@ -178,7 +194,7 @@ ol {
   width: 20px;
   height: 20px;
   margin-right: 5px;
-  border: 1px solid #fff;
+  border: 1px solid currentColor;
   vertical-align: middle;
   background-color: inherit;
   appearance: none;
@@ -192,9 +208,10 @@ ol {
 /* button */
 
 .button {
+  align-self: flex-end;
   width: 100%;
   height: 34px;
-  border: 1px solid #fff;
+  border: 1px solid currentColor;
   padding: 0;
   color: inherit;
   font-family: inherit;
@@ -208,15 +225,16 @@ ol {
 /* состояния */
 
 .search-form__label:has(:focus-visible) {
-  border: 1px solid #fff;
-  border-radius: 0;
+  outline: 1px solid currentColor;
 }
 
 .search-form__checkbox:checked + span {
-  background-color: #fff;
+  outline: 2px solid #000;
+  outline-offset: -3px;
+  background-color: currentColor;
 }
 
-.search-form__label:hover {
+.search-form__label:hover :not(.search-form__textfield) {
   text-decoration: underline;
 }
 
@@ -228,10 +246,25 @@ ol {
   text-decoration: underline;
 }
 
-.content__video-card:active {
+.search-form__submit-button:focus-visible {
+  outline: currentColor solid 1px;
+  outline-offset: 1px;
+}
+
+.content__card-link:active {
   background-color: #545050;
 }
 
-.content__video-card:hover {
+.content__card-link_current {
+  text-decoration: none;
+  background-color: #545050;
+}
+
+.content__card-link:hover {
   text-decoration: underline;
+}
+
+.content__card-link:focus-visible {
+  outline: 1px solid currentColor;
+  outline-offset: -1px;
 }
