--- a/styles/style.css
+++ b/styles/style.css
@@ -62,6 +62,7 @@ ol {
   flex-direction: column;
   height: 298px;
   overflow: auto;
+  overflow-x: hidden;
 }
 
 .content__list-item:not(:last-of-type) {
@@ -90,7 +91,6 @@ ol {
 .content__card-link {
   display: block;
   width: 394px;
-  height: 107px;
   color: inherit;
   text-decoration: none;
 }
@@ -131,7 +131,7 @@ ol {
 .content__video-card {
   display: flex;
   justify-content: flex-start;
-  padding-top: 2px;
+  padding: 2px 0;
   cursor: pointer;
 }
 
@@ -167,9 +167,9 @@ ol {
 
 .search-form__textfield {
   width: 225px;
-  border-top: 1px solid #fff;
+  border-top: 1px solid currentColor;
   border-right: none;
-  border-bottom: 1px solid #fff;
+  border-bottom: 1px solid currentColor;
   outline: none;
   color: inherit;
   font-family: inherit;
